Closed
Bug 129734
Opened 24 years ago
Closed 24 years ago
Site name is displayed as "c" in Image Manager after just blocking site.
Categories
(Core :: Networking: Cookies, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: andre.bugs2, Assigned: darin.moz)
References
Details
(Keywords: crash, regression)
Attachments
(2 files)
|
8.11 KB,
image/png
|
Details | |
|
519 bytes,
patch
|
morse
:
review+
jag+mozilla
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
[Build-ID: 2002-03-08-07]
If I block an image from a site via "Block images from this server" and check
the Image Manager the site name will be displayed as "c" regardless of the name
of the site. Restarting mozilla cures this. Trying "Cookies" component first,
please reassign if it is incorrect.
Steps to reproduce:
1) Go to http://www.mozilla.org/
2) Block the top banner by right-clicking and choosing "Block images from this
server".
3) Go to Tasks->Privacy & Security->Image Manager->Manage Image Permissions
Result: The site name is displayed as "c".
Expected result: The site name should be displayed as "www.mozilla.org"
Restarting Mozilla and entering Image Manager again will display the correct value.
| Reporter | ||
Comment 1•24 years ago
|
||
Notice that the site name is "C". If I try this on the 0.9.9 branch it is also
incorrect, but on that build it shows up as ":".
| Reporter | ||
Comment 2•24 years ago
|
||
Narrowed this down:
2002-03-05-21 OK
2002-03-06-07 BROKEN
The big landing between these two builds is darins "internationalized URIs"
support, so that's the first suspect. CC:ing darin because of this.
These where all the checkins between these builds:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=03%2F05%2F2002+21%3A00%3A00&maxdate=03%2F06%2F2002+07%3A00%3A00&cvsroot=%2Fcvsroot
| Assignee | ||
Comment 3•24 years ago
|
||
how about trying one of the builds before my landing? ...like the 3/5 build.
Comment 4•24 years ago
|
||
Darin, sounds like that's what Andre did, and he reported that it worked fine on
the 3-5 build.
Comment 5•24 years ago
|
||
*** Bug 129488 has been marked as a duplicate of this bug. ***
Comment 6•24 years ago
|
||
*** Bug 129035 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•24 years ago
|
||
whoops... somehow i misread the date stamp in his post. sorry about that!
i can investigate this bug... most likely some fallout from my landing as andre
said.
-> me
Assignee: morse → darin
| Assignee | ||
Updated•24 years ago
|
Severity: normal → major
Status: NEW → ASSIGNED
Keywords: regression
Priority: -- → P2
Target Milestone: --- → mozilla1.0
Comment 8•24 years ago
|
||
*** Bug 129261 has been marked as a duplicate of this bug. ***
Comment 9•24 years ago
|
||
I wonder if bug 129648 is also related here. However not enough evidence to dup
it yet.
| Assignee | ||
Comment 10•24 years ago
|
||
when working on bug 124042, i didn't realize that Permission_AddHost free's the
host string passed to it. this patch fixes this bug, which can be considered a
crasher... it crashed on me when i tried to do other things after blocking an
image.
| Assignee | ||
Comment 11•24 years ago
|
||
morse: can you r= this patch?
Comment 12•24 years ago
|
||
Comment on attachment 73313 [details] [diff] [review]
v1 patch
sr=jag
Attachment #73313 -
Flags: superreview+
Comment 13•24 years ago
|
||
Comment on attachment 73313 [details] [diff] [review]
v1 patch
r=morse
Attachment #73313 -
Flags: review+
Comment 14•24 years ago
|
||
Comment on attachment 73313 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to the 0.9.9 branch and the 1.0 trunk
Attachment #73313 -
Flags: approval+
| Assignee | ||
Comment 15•24 years ago
|
||
fixed on trunk and 0.9.9 branch
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 16•24 years ago
|
||
Verified fixed with 2002-03-09-12 from the 0.9.9 branch.
Status: RESOLVED → VERIFIED
Comment 17•24 years ago
|
||
*** Bug 129648 has been marked as a duplicate of this bug. ***
Comment 18•24 years ago
|
||
*** Bug 130006 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•